# Multimodal-Investigation-Agent

./: .env.example  .gitignore  README.md  actions.py  agent.py  app.py  config.py  events.py  planner.py  prompts.py  pyproject.toml  state.py  tools.py  validator.py  visualize_graph.py
examples/: context.txt
outputs/: run_example.json  run_output.json
tools/: __init__.py  llm.py  mock.py
