[project]
name = "multimodal-agent-project"
version = "0.1.0"
description = "LangGraph-based multimodal agent that answers questions from image, document, and audio files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2.2",
]

[project.scripts]
app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["app.py", "agent.py", "planner.py", "state.py", "tools.py"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
]
