[project]
name = "multimodal-agent-project"
version = "0.1.0"
description = "LangGraph-based multimodal agent that answers questions from image, document, and audio files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2.2",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "gradio>=4.0",
]

[project.scripts]
app = "app:main"
ui = "app:launch_ui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["app.py", "agent.py", "planner.py", "state.py", "tools", "events.py", "actions.py", "validator.py", "prompts.py", "config.py"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
]
